# tauri_windows_packer

./: .gitignore  LICENSE  README.md  index.js  package.json
templates/: Cargo.toml  tauri.conf.json
